--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   get_storage: ^2.1.1
   flutter_local_notifications: ^16.3.2
   timezone: ^0.9.2
+  intl: ^0.18.1
+  google_fonts: ^6.1.0
+  date_picker_timeline: ^1.2.5
   # flutter_native_timezone: ^2.0.0
 
 dev_dependencies:
@@ -62,8 +65,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - images/avatar.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
