--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   intl: ^0.18.1
   google_fonts: ^6.1.0
   date_picker_timeline: ^1.2.5
+  sqflite: ^2.3.2
   # flutter_native_timezone: ^2.0.0
 
 dev_dependencies:
